kube/prod/ingress-web.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gallery-marktaguiad-dev-ingress
  annotations:
    gethomepage.dev/description: "Mark Taguiad"
    gethomepage.dev/enabled: "true"
    gethomepage.dev/group: Links
    gethomepage.dev/icon: https://raw.githubusercontent.com/mcbtaguiad/marktaguiad.dev-hugo/main/app/static/images/fa-tags-nobg.png
    gethomepage.dev/name: gallery-marktaguiad-dev
    # kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-issuer-cloudflare"
    # cert-manager.io/issuer: prod-issuer
    # cert-manager.io/issuer-kind: OriginIssuer
    # cert-manager.io/issuer-group: cert-manager.k8s.cloudflare.com
spec:
  ingressClassName: nginx
  tls:
  - hosts:
      - gallery.marktaguiad.dev
    secretName: gallery-marktaguiad-dev-tls
  rules:
  - host: gallery.marktaguiad.dev
    http:
      paths:
      - path: /
        #pathType: ImplementationSpecific
        pathType: Prefix
        backend:
          service: 
            name: gallery-marktaguiad-dev
            port:
              number: 80
